@@ -1,5 +1,11 @@
 v2.15.3 - xx xxx xxxx
 ---------------------
+   - The Python Idl class now has a cooperative_yield() method that can be
+     overridden by an application that uses eventlet / gevent / asyncio with
+     the desired yield method (e.g. {eventlet,gevent,asyncio}.sleep(0)) to
+     prevent the application from being blocked for a long time while
+     processing database updates.
+
 
 v2.15.2 - 21 Oct 2021
 ---------------------
